# pathological

./: .gitignore  docker-compose.yml  open-api-gen.sh
.github/: dependabot.yaml
backend/: pip_freeze.sh  pyproject.toml  requirements.txt
backend/src/: app.py  game_service.py
backend/src/game_domain/: challenge_repository.py  game_service.py  player_repository.py
backend/src/models/: game_models.py
backend/src/pathological/: app.py  app_error_handler.py  resources_utils.py
backend/src/pathological/app_config/: app_parameters.py  env_tool.py  game_parameters.py
backend/src/pathological/challenges/: challenge_repository.py  challenge_service.py  pandas_challenge_repo.py
backend/src/pathological/datasets/: generate_dummy.py  grab_util.py
backend/src/pathological/events/: EventletTaskScheduler.py  WebSocketsEventDispatcher.py  connections_repository.py  event_dispatcher.py  named_events.py  task_scheduler.py
backend/src/pathological/exceptions/: user_input_exception.py
backend/src/pathological/game_domain/: challenge_repository.py  game_service.py  multiplayer_game_repository.py  multiplayer_game_service.py  player_repository.py
backend/src/pathological/game_domain/multiplayer/: multiplayer_game_repository.py  multiplayer_game_service.py
backend/src/pathological/images/: image_service.py
backend/src/pathological/models/: game_models.py
backend/src/pathological/open_api/: event_models.py
backend/test/: test_app.py  test_game_service.py  test_multiplayer_game_service.py  test_open_api_models.py  test_pandas_repo.py  test_sockets.py
docs/: CNAME  (+2 more)
(+46 files in other folders)
