[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathological"
version = "0.0.1"
dependencies = [
    "attrs (>=25.3.0,<26.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "eventlet (>=0.39.1,<0.40.0)"
]
requires-python = ">=3.9,<4.0.0"
